add home page in HTML and CSS styling

--- a/index.html
+++ b/index.html
@@ -1,17 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capstone Project - Concert Page</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet" />
     <script src="index.js"></script>
-</head>
-<body>
-  <header>
-    
-  </header>
-    
-</body>
+
+    <title>Capstone Project - Concert Page</title>
+  </head>
+  <body>
+    <header>
+      <div class="upper-header">
+        <ul class="list">
+          <li><img src="" alt="facebook-link" /></li>
+          <li><img src="" alt="twitter-link" /></li>
+          <li><p>English</p></li>
+          <li><p>My Page</p></li>
+          <li><p>Logout</p></li>
+        </ul>
+      </div>
+      <nav>
+        <a href=""><img src="./assets/Logo.webp" alt="logo" id="logo"/></a>
+        <ul class="list">
+          <li class="desktop-nav"><a href="">About</a></li>
+          <li class="desktop-nav"><a href="">Program</a></li>
+          <li class="desktop-nav"><a href="">Join</a></li>
+          <li class="desktop-nav"><a href="">Sponsor</a></li>
+          <li class="desktop-nav"><a href="">News</a></li>
+          <li class="hamburger">
+            <a href=""><img src="./assets/hamburger.png" alt="hamburger" id="hamburger"/></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section class="home">
+      <h3>Live worship like you've never had it before!</h3>
+      <img src="assets/aboutLOGO.png" alt="program logo" id="about-logo"/>
+      <p id="p1">
+        Birthed by a God-inspired vision, ‘The Experience’ provides a platform
+        where all can raise their hearts, hands and voices together as one in
+        unfettered praise to the Almighty irrespective of tribe, denomination,
+        creed or language.
+      </p>
+      <h2>fri<span id="h2span">02Dec2022</span>|7pm</h2>
+      <p id="p2">tafawa balewa square, onikan, lagos</p>
+    </section>
+    <section class="program">
+      <h3>Main Program</h3>
+      <div class="program-list">
+        <ul class="prog-1">
+          <li><img src="./assets/pg 4.png" alt="concert clipart" /></li>
+          <li class="program-head">Concert</li>
+          <li class="program-body">
+            The concert features exceptional gospel music from some of the most
+            celebrated, international and indigenous recording artistes of our
+            time.
+          </li>
+        </ul>
+        <ul class="prog-2">
+          <li><img src="./assets/pg 3clip.png" alt="Sermons clipart" /></li>
+          <li class="program-head">Sermons</li>
+          <li class="program-body">
+            A variety of comedy performances will feature, as well as goodwill
+            messages and intercessory prayers.
+          </li>
+        </ul>
+        <ul class="prog-3">
+          <li><img src="assets\pg 1.png" alt="connect clipart" /></li>
+          <li class="program-head">Connect</li>
+          <li class="program-body">
+            Have time to connect with different people from all over the
+            country, all under the banner of Christ Jesus
+          </li>
+        </ul>
+        <ul class="prog-4">
+          <li><img src="assets\pg 2.png" alt="Exhibition clipart" /></li>
+          <li class="program-head">Exhibition</li>
+          <li class="program-body">
+            Appreciate different works of art and inspiration from the body of
+            Christ
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="performers">
+      <!-- This section is created dynamically -->
+    </section>
+  </body>
 </html>
