finish the mobile home page

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
     </section>
     <section class="program">
       <h3>Main Program</h3>
+      <hr>
       <div class="program-list">
         <ul class="prog-1">
-          <li><img src="./assets/pg 4.png" alt="concert clipart" /></li>
+          <li><img src="./assets/pg 4.png" alt="concert clipart" id="im1"/></li>
           <li class="program-head">Concert</li>
           <li class="program-body">
             The concert features exceptional gospel music from some of the most
