adapt mobile homepage to desktop

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <header>
       <div class="upper-header">
-        <ul class="list">
-          <li><img src="" alt="facebook-link" /></li>
-          <li><img src="" alt="twitter-link" /></li>
+        <ul class="list1">
+          <li><img src="./assets/fb icon grey.png" alt="facebook-link" class="header-top-img"/></li>
+          <li><img src="./assets/twitter icon grey.png" alt="twitter-link" class="header-top-img"/></li>
           <li><p>English</p></li>
           <li><p>My Page</p></li>
           <li><p>Logout</p></li>
@@ -27,7 +27,7 @@
       </div>
       <nav>
         <a href=""><img src="./assets/Logo.webp" alt="logo" id="logo"/></a>
-        <ul class="list">
+        <ul class="list2">
           <li class="desktop-nav"><a href="">About</a></li>
           <li class="desktop-nav"><a href="">Program</a></li>
           <li class="desktop-nav"><a href="">Join</a></li>
