adapt about page to desktop

--- a/about.html
+++ b/about.html
@@ -17,26 +17,24 @@
   <body>
     <header>
       <div class="upper-header">
-        <ul class="list">
-          <li><img src="" alt="facebook-link" /></li>
-          <li><img src="" alt="twitter-link" /></li>
+        <ul class="list1">
+          <li><img src="./assets/fb icon grey.png" alt="facebook-link" class="header-top-img"/></li>
+          <li><img src="./assets/twitter icon grey.png" alt="twitter-link" class="header-top-img"/></li>
           <li><p>English</p></li>
           <li><p>My Page</p></li>
           <li><p>Logout</p></li>
         </ul>
       </div>
       <nav>
-        <a href=""><img src="./assets/Logo.webp" alt="logo" id="logo" /></a>
-        <ul class="list">
+        <a href=""><img src="./assets/Logo.webp" alt="logo" id="logo"/></a>
+        <ul class="list2">
           <li class="desktop-nav"><a href="">About</a></li>
           <li class="desktop-nav"><a href="">Program</a></li>
           <li class="desktop-nav"><a href="">Join</a></li>
           <li class="desktop-nav"><a href="">Sponsor</a></li>
           <li class="desktop-nav"><a href="">News</a></li>
           <li class="hamburger">
-            <a href=""
-              ><img src="./assets/hamburger.png" alt="hamburger" id="hamburger"
-            /></a>
+            <a href=""><img src="./assets/hamburger.png" alt="hamburger" id="hamburger"/></a>
           </li>
         </ul>
       </nav>
