make mobile-menu and links functional

--- a/index.html
+++ b/index.html
@@ -26,18 +26,30 @@
         </ul>
       </div>
       <nav>
-        <a href=""><img src="./assets/Logo.webp" alt="logo" id="logo"/></a>
+        <a href="index.html"><img src="./assets/Logo.webp" alt="logo" id="logo"/></a>
         <ul class="list2">
-          <li class="desktop-nav"><a href="">About</a></li>
-          <li class="desktop-nav"><a href="">Program</a></li>
-          <li class="desktop-nav"><a href="">Join</a></li>
-          <li class="desktop-nav"><a href="">Sponsor</a></li>
-          <li class="desktop-nav"><a href="">News</a></li>
+          <li class="desktop-nav"><a href="about.html">About</a></li>
+          <li class="desktop-nav"><a href="#">Program</a></li>
+          <li class="desktop-nav"><a href="#">Join</a></li>
+          <li class="desktop-nav"><a href="#">Sponsor</a></li>
+          <li class="desktop-nav"><a href="#">News</a></li>
           <li class="hamburger">
-            <a href=""><img src="./assets/hamburger.png" alt="hamburger" id="hamburger"/></a>
+            <img src="./assets/hamburger.png" alt="hamburger" id="hamburger"/>
           </li>
         </ul>
       </nav>
+      <div class="mobile-menu">
+        <ul class="list3">
+          <li id="close" class="mobile-nav">
+            <img src="./assets/Icon.png" alt="close" id="close-button"/>
+          </li>
+          <li class="mobile-nav"><a href="about.html">About</a></li>
+          <li class="mobile-nav"><a href="#">Program</a></li>
+          <li class="mobile-nav"><a href="#">Join</a></li>
+          <li class="mobile-nav"><a href="#">Sponsor</a></li>
+          <li class="mobile-nav"><a href="#">News</a></li>
+        </ul>
+      </div>
     </header>
     <section class="home">
       <h3>Live worship like you've never had it before!</h3>
