add features artists section dynamically

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </ul>
       </div>
     </section>
-    <section class="performers">
+    <section class="performers" id="performersId">
       <!-- This section is created dynamically -->
     </section>
   </body>
