update js and css files

--- a/index.html
+++ b/index.html
@@ -101,9 +101,19 @@
           </li>
         </ul>
       </div>
+      <p class="desktop-p">SEE THE WHOLE PROGRAM</p>
     </section>
     <section class="performers" id="performersId">
       <!-- This section is created dynamically -->
     </section>
+    <footer class="desktop-only">
+      <div class="footer-bottom">
+        <h2 class="wit">shyn designs</h2>
+        <div class="footer-bottoma" >
+          <p class="wit">2022 Microverse Capstone Project.</p>
+          <p class="wit">Some Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
