add footer to about page

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
       </article>
     </section>
     <footer>
-      <div class="footer-top">
+      <div class="footer-top" id="mobile1">
         <h3>Partners</h3>
         <hr />
         <div class="sponsors">
@@ -115,13 +115,23 @@
           <img src="./assets/sp4.png" alt="sponsor4" />
         </div>
       </div>
-      <div class="footer-bottom">
+      <div class="footer-bottom" id="mobile2">
         <h2>shyn designs</h2>
         <div class="footer-bottoma">
           <p>2022 Microverse Capstone Project.</p>
           <p>Some Rights Reserved.</p>
         </div>
       </div>
+      <div class="desktop-only" id="desktop1">
+        <div class="footer-bottom">
+          <h2 class="wit">shyn designs</h2>
+          <div class="footer-bottoma" >
+            <p class="wit">2022 Microverse Capstone Project.</p>
+            <p class="wit">Some Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
     </footer>
+    
   </body>
 </html>
