--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         creed or language.
       </p>
       <h2>fri<span id="h2span">02Dec2022</span>|7pm</h2>
-      <p id="p2">tafawa balewa square, onikan, lagos</p>
+      <p id="p2">@ tafawa balewa square, onikan, lagos</p>
     </section>
     <section class="program">
       <h3>Main Program</h3>
@@ -101,17 +101,28 @@
           </li>
         </ul>
       </div>
+      <button class="button-mob">Join THE EXPERIENCE 2022</button>
       <p class="desktop-p">SEE THE WHOLE PROGRAM</p>
     </section>
     <section class="performers" id="performersId">
       <!-- This section is created dynamically -->
     </section>
-    <footer class="desktop-only">
+        <footer class="desktop-only">
+      <div class="footer-top">
+        <h3>Partners</h3>
+        <hr />
+        <div class="sponsors">
+          <img src="./assets/sp1.jpg" alt="sponsor1" />
+          <img src="./assets/sp2.jpg" alt="sponsor2" />
+          <img src="./assets/sp3.png" alt="sponsor3" />
+          <img src="./assets/sp4.png" alt="sponsor4" />
+        </div>
+      </div>
       <div class="footer-bottom">
-        <h2 class="wit">shyn designs</h2>
-        <div class="footer-bottoma" >
-          <p class="wit">2022 Microverse Capstone Project.</p>
-          <p class="wit">Some Rights Reserved.</p>
+        <h2>shyn designs</h2>
+        <div class="footer-bottoma">
+          <p>2022 Microverse Capstone Project.</p>
+          <p>Some Rights Reserved.</p>
         </div>
       </div>
     </footer>
