--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       <nav>
         <a href="index.html"><img src="./assets/Logo.webp" alt="logo" id="logo"/></a>
         <ul class="list2">
-          <li class="desktop-nav"><a href="about.html">About</a></li>
+          <li class="desktop-nav"><a href="about.html" style="color: #ec5242;">About</a></li>
           <li class="desktop-nav"><a href="#">Program</a></li>
           <li class="desktop-nav"><a href="#">Join</a></li>
           <li class="desktop-nav"><a href="#">Sponsor</a></li>
@@ -75,34 +75,28 @@
       <div class="divider">
         <h1>over<span>500,000</span>Voices</h1>
       </div>
-      <article class="article-container">
-        <h2>THE CONVENER</h2>
-        <h3>
-          Paul Adefarasin is the Founder and Metropolitan Senior Pastor of the
-          House On The Rock, a multiracial, multi-tribal, and multifaceted
-          Church with several daughter Churches and ministries throughout Africa
-          and in Europe.
-        </h3>
-        <p>
-          He is the Founder and President of The Rock Foundation, a charity
-          committed to social reformation, education, provision of healthcare
-          and relief work within Nigeria. <br /><br />
-          A Christian Minister, Author, Coach, Motivator, Television Broadcaster
-          and Speaker, Paul Adefarasin is well-known for his clear message of
-          grace and a burning passion for the transgenerational transformation
-          of society, his nation and his continent. He preaches hope, healing,
-          productivity and empowerment to all through his television broadcast,
-          ‘Something Is About To Happen’, which continues to air in millions of
-          homes across Africa and Europe after more than 20 years. <br /><br />
-          Paul Adefarasin is the convener of “The Experience” – the largest
-          annual musical event in Africa. He is also the immediate past Deputy
-          National President of the Pentecostal Fellowship of Nigeria (PFN) –
-          the umbrella body for charismatic word of faith and Pentecostal
-          churches in Nigeria, and a life member of its National Advisory
-          Council.
-        </p>
-        <img src="./assets/PASTOR-PAUL-PORTRAIT-SEPT-2017.BUST-2.webp" alt="" />
-      </article>
+      <div class="sum-head">
+        <h2>House on the Rocks The Experience 2022</h2>
+        <hr>
+        <p>The logo of the 2022 Experience Concert was agreed on unanimously, as it is the 16th edition</p>
+        <img src="assets/aboutLOGO.png" alt="program logo" id="sum-logo" />
+      </div>
+      <hr id="linnn">
+      <div class="sum-body">
+        <h2>See the past Experience Edition</h2>
+        <hr>
+        <p>Take a look at the last two The Experience Concerts which  took place at the same venue</p>
+        <div class="cont">
+          <div class="pic-p1">
+            <h3>2020</h3>
+            <p>The Experience 14</p>
+          </div>
+          <div class="pic-p2">
+            <h3>2021</h3>
+            <p>The Experience 15</p>
+          </div>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="footer-top" id="mobile1">
