update html and css files as per review

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="about.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
@@ -16,33 +16,12 @@
   </head>
   <body>
     <header>
-      <div class="upper-header">
-        <ul class="list1">
-          <li><img src="./assets/fb icon grey.png" alt="facebook-link" class="header-top-img"/></li>
-          <li><img src="./assets/twitter icon grey.png" alt="twitter-link" class="header-top-img"/></li>
-          <li><p>English</p></li>
-          <li><p>My Page</p></li>
-          <li><p>Logout</p></li>
-        </ul>
-      </div>
-      <nav>
-        <a href="index.html"><img src="./assets/Logo.webp" alt="logo" id="logo"/></a>
-        <ul class="list2">
-          <li class="desktop-nav"><a href="about.html" style="color: #ec5242;">About</a></li>
-          <li class="desktop-nav"><a href="#">Program</a></li>
-          <li class="desktop-nav"><a href="#">Join</a></li>
-          <li class="desktop-nav"><a href="#">Sponsor</a></li>
-          <li class="desktop-nav"><a href="#">News</a></li>
-          <li class="hamburger">
-            <img src="./assets/hamburger.png" alt="hamburger" id="hamburger"/>
-          </li>
-        </ul>
-      </nav>
       <div class="mobile-menu">
         <ul class="list3">
           <li id="close" class="mobile-nav">
-            <img src="./assets/Icon.png" alt="close" id="close-button"/>
+            <img src="./assets/Icon.png" alt="close" id="close-button" />
           </li>
+          <li class="mobile-nav"><a href="index.html">Home</a></li>
           <li class="mobile-nav"><a href="about.html">About</a></li>
           <li class="mobile-nav"><a href="#">Program</a></li>
           <li class="mobile-nav"><a href="#">Join</a></li>
@@ -50,21 +29,62 @@
           <li class="mobile-nav"><a href="#">News</a></li>
         </ul>
       </div>
+      <div class="upper-header">
+        <ul class="list1">
+          <li>
+            <img
+              src="./assets/New folder/facebook.png"
+              alt="facebook-link"
+              class="header-top-img"
+            />
+          </li>
+          <li>
+            <img
+              src="./assets/New folder/twitter.png"
+              alt="twitter-link"
+              class="header-top-img"
+            />
+          </li>
+          <li><p>English</p></li>
+          <li><p>My Page</p></li>
+          <li><p>Logout</p></li>
+        </ul>
+      </div>
+      <nav>
+        <a href="index.html"
+          ><img
+            src="./assets/aboutLOGO.png"
+            alt="logo"
+            id="logo"
+            class="desktop-nav"
+        /></a>
+        <ul class="list2">
+          <li class="desktop-nav"><a href="about.html">About</a></li>
+          <li class="desktop-nav"><a href="#">Program</a></li>
+          <li class="desktop-nav"><a href="#">Join</a></li>
+          <li class="desktop-nav"><a href="#">Sponsor</a></li>
+          <li class="desktop-nav"><a href="#">News</a></li>
+          <li class="desktop-nav"><button>TE Campaign</button></li>
+          <li class="hamburger">
+            <img
+              src="./assets/New folder/ham.png"
+              alt="hamburger"
+              id="hamburger"
+            />
+          </li>
+        </ul>
+      </nav>
     </header>
     <section class="home">
-      <h3>About...</h3>
-      <img src="assets/aboutLOGO.png" alt="program logo" id="about-logo" />
+      <h3>"Hello! Sharing world"</h3>
+      <h1>THE EXPERIENCE<br />GOSPEL CONCERT 2022</h1>
+      <hr>
       <p id="p1b">
         ‘The Experience’ is a free, all-night Gospel music concert featuring
         some of the most celebrated and exceptional psalmists from Nigeria and
         around the world. This phenomenal concert is convened annually by Pastor
         Paul Adefarasin, the Metropolitan of all House On The Rock, Lagos,
         Nigeria.
-        <br /><br />
-        It is the perfect atmosphere for hundreds of thousands of people to
-        gather in one accord to praise and worship God with unfettered
-        expressions from dusk till dawn irrespective of class, race or
-        denomination.
       </p>
       <p id="p2b">
         For further information,<br />kindly email us at
