--- a/index.html
+++ b/index.html
@@ -16,33 +16,12 @@
   </head>
   <body>
     <header>
-      <div class="upper-header">
-        <ul class="list1">
-          <li><img src="./assets/fb icon grey.png" alt="facebook-link" class="header-top-img"/></li>
-          <li><img src="./assets/twitter icon grey.png" alt="twitter-link" class="header-top-img"/></li>
-          <li><p>English</p></li>
-          <li><p>My Page</p></li>
-          <li><p>Logout</p></li>
-        </ul>
-      </div>
-      <nav>
-        <a href="index.html"><img src="./assets/Logo.webp" alt="logo" id="logo"/></a>
-        <ul class="list2">
-          <li class="desktop-nav"><a href="about.html">About</a></li>
-          <li class="desktop-nav"><a href="#">Program</a></li>
-          <li class="desktop-nav"><a href="#">Join</a></li>
-          <li class="desktop-nav"><a href="#">Sponsor</a></li>
-          <li class="desktop-nav"><a href="#">News</a></li>
-          <li class="hamburger">
-            <img src="./assets/hamburger.png" alt="hamburger" id="hamburger"/>
-          </li>
-        </ul>
-      </nav>
       <div class="mobile-menu">
         <ul class="list3">
           <li id="close" class="mobile-nav">
-            <img src="./assets/Icon.png" alt="close" id="close-button"/>
+            <img src="./assets/Icon.png" alt="close" id="close-button" />
           </li>
+          <li class="mobile-nav"><a href="index.html">Home</a></li>
           <li class="mobile-nav"><a href="about.html">About</a></li>
           <li class="mobile-nav"><a href="#">Program</a></li>
           <li class="mobile-nav"><a href="#">Join</a></li>
@@ -50,25 +29,72 @@
           <li class="mobile-nav"><a href="#">News</a></li>
         </ul>
       </div>
+      <div class="upper-header">
+        <ul class="list1">
+          <li>
+            <img
+              src="./assets/New folder/facebook.png"
+              alt="facebook-link"
+              class="header-top-img"
+            />
+          </li>
+          <li>
+            <img
+              src="./assets/New folder/twitter.png"
+              alt="twitter-link"
+              class="header-top-img"
+            />
+          </li>
+          <li><p>English</p></li>
+          <li><p>My Page</p></li>
+          <li><p>Logout</p></li>
+        </ul>
+      </div>
+      <nav>
+        <a href="index.html"
+          ><img
+            src="./assets/aboutLOGO.png"
+            alt="logo"
+            id="logo"
+            class="desktop-nav"
+        /></a>
+        <ul class="list2">
+          <li class="desktop-nav"><a href="about.html">About</a></li>
+          <li class="desktop-nav"><a href="#">Program</a></li>
+          <li class="desktop-nav"><a href="#">Join</a></li>
+          <li class="desktop-nav"><a href="#">Sponsor</a></li>
+          <li class="desktop-nav"><a href="#">News</a></li>
+          <li class="desktop-nav"><button>TE Campaign</button></li>
+          <li class="hamburger">
+            <img
+              src="./assets/New folder/ham.png"
+              alt="hamburger"
+              id="hamburger"
+            />
+          </li>
+        </ul>
+      </nav>
     </header>
     <section class="home">
-      <h3>Live worship like you've never had it before!</h3>
-      <img src="assets/aboutLOGO.png" alt="program logo" id="about-logo"/>
+      <h3>"Hello! Sharing world"</h3>
+      <h1>THE EXPERIENCE<br />GOSPEL CONCERT<br />2022</h1>
       <p id="p1">
         Birthed by a God-inspired vision, ‘The Experience’ provides a platform
         where all can raise their hearts, hands and voices together as one in
         unfettered praise to the Almighty irrespective of tribe, denomination,
         creed or language.
       </p>
-      <h2>fri<span id="h2span">02Dec2022</span>|7pm</h2>
+      <h2>2022.12.10(FRI) ~ 11(SAT)</h2>
       <p id="p2">@ tafawa balewa square, onikan, lagos</p>
     </section>
     <section class="program">
       <h3>Main Program</h3>
-      <hr>
+      <hr />
       <div class="program-list">
         <ul class="prog-1">
-          <li><img src="./assets/pg 4.png" alt="concert clipart" id="im1"/></li>
+          <li>
+            <img src="./assets/pg 4.png" alt="concert clipart" id="im1" />
+          </li>
           <li class="program-head">Concert</li>
           <li class="program-body">
             The concert features exceptional gospel music from some of the most
@@ -100,6 +126,14 @@
             Christ
           </li>
         </ul>
+        <ul class="prog-5">
+          <li><img src="assets\pg 4.png" alt="Learn clipart" /></li>
+          <li class="program-head">Learn</li>
+          <li class="program-body">
+            Learn from different artists and theirworks of art and inspiration
+            from the body of Christ
+          </li>
+        </ul>
       </div>
       <button class="button-mob">Join THE EXPERIENCE 2022</button>
       <p class="desktop-p">SEE THE WHOLE PROGRAM</p>
@@ -107,7 +141,7 @@
     <section class="performers" id="performersId">
       <!-- This section is created dynamically -->
     </section>
-        <footer class="desktop-only">
+    <footer class="desktop-only">
       <div class="footer-top">
         <h3>Partners</h3>
         <hr />
@@ -119,7 +153,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <h2>shyn designs</h2>
+        <h2>shyn<br>designs nigeria</h2>
         <div class="footer-bottoma">
           <p>2022 Microverse Capstone Project.</p>
           <p>Some Rights Reserved.</p>
