fix reviewer's comments

--- a/about.html
+++ b/about.html
@@ -138,10 +138,15 @@
       </div>
       <div class="desktop-only" id="desktop1">
         <div class="footer-bottom">
-          <h2 class="wit">shyn designs</h2>
-          <div class="footer-bottoma" >
-            <p class="wit">2022 Microverse Capstone Project.</p>
-            <p class="wit">Some Rights Reserved.</p>
+          <img
+              src="./assets/Logo.webp"
+              alt="logo"
+              id="logo"
+              class="desktop-nav"
+          />
+          <div class="footer-bottoma">
+            <p>2022 Microverse Capstone Project.Some Rights Reserved.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolorum at sit consequatur hic dolorem aperiam blanditiis expedita natus, dolore ab eius qui veritatis. Exercitationem consequuntur delectus saepe dolores minus.</p>
           </div>
         </div>
       </div>
