--- a/index.html
+++ b/index.html
@@ -153,10 +153,15 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <h2>shyn<br>designs nigeria</h2>
+        <img
+            src="./assets/aboutLOGO.png"
+            alt="logo"
+            id="logo"
+            class="desktop-nav"
+        />
         <div class="footer-bottoma">
-          <p>2022 Microverse Capstone Project.</p>
-          <p>Some Rights Reserved.</p>
+          <p>2022 Microverse Capstone Project.Some Rights Reserved.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dolorum at sit consequatur hic dolorem aperiam blanditiis expedita natus, dolore ab eius qui veritatis. Exercitationem consequuntur delectus saepe dolores minus.</p>
         </div>
       </div>
     </footer>
